--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-grid-layout": "^1.1.1",
+    "react-grid-resizable": "^1.0.0",
+    "react-reflex": "^3.1.0",
+    "react-resizable": "^1.11.0",
+    "react-resizable-rotatable-draggable": "^0.2.0",
+    "react-resize-panel": "^0.3.5",
     "react-scripts": "4.0.0",
+    "styled-components": "^5.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
