--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-grid-layout": "^1.1.1",
@@ -14,6 +16,7 @@
     "react-resizable": "^1.11.0",
     "react-resizable-rotatable-draggable": "^0.2.0",
     "react-resize-panel": "^0.3.5",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.0",
     "web-vitals": "^0.2.4"
