--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-resize-panel": "^0.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "reactjs-popup": "^2.0.4",
     "styled-components": "^5.2.0",
     "web-vitals": "^0.2.4"
   },
